--- a/static/app.css
+++ b/static/app.css
@@ -15,7 +15,9 @@
     --normal-radius: 0.75rem;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
     box-sizing: border-box;
 }
 
@@ -25,24 +27,23 @@ body {
 
     display: grid;
     gap: var(--normal-spacing);
-    grid-template: 10vh calc(80vh - calc(var(--normal-spacing) * 2)) 10vh / 100%;
+    grid-template: 10vh calc(90vh - calc(var(--normal-spacing) * 2)) / 100%;
     place-content: center;
 
     color: var(--accent-1);
-    background: linear-gradient(
-        to right,
-        var(--og-color-green) 0%, 
-        var(--og-color-black) 10%, 
-        var(--og-color-black) 90%, 
-        var(--og-color-green) 100%
-    );
+    background: linear-gradient(to right,
+            var(--og-color-green) 0%,
+            var(--og-color-black) 10%,
+            var(--og-color-black) 90%,
+            var(--og-color-green) 100%);
     backdrop-filter: brightness(.5) blur(1rem);
 
     font-size: 16px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-ul, li {
+ul,
+li {
     padding: 0;
     margin: 0;
     list-style: none;
@@ -50,4 +51,10 @@ ul, li {
 
 a {
     text-decoration: none;
+}
+
+@keyframes parallax {
+    to {
+        transform: translateY(calc(var(--parallax-speed) * 20px));
+    }
 }
