--- a/static/app.css
+++ b/static/app.css
@@ -25,11 +25,7 @@ body {
     margin: 0;
     padding: 0;
 
-    display: grid;
-    gap: var(--normal-spacing);
-    grid-template: 10vh calc(90vh - calc(var(--normal-spacing) * 2)) / 100%;
-    place-content: center;
-
+    min-height: 100svh;
     color: var(--accent-1);
     background: linear-gradient(to right,
             var(--og-color-green) 0%,
@@ -53,6 +49,11 @@ a {
     text-decoration: none;
 }
 
+._glass {
+    background-color: transparent;
+    backdrop-filter: blur(20px);
+    box-shadow: 0px 0px 30px 5px rgb(255 255 255 / 0.2);
+}
 @keyframes parallax {
     to {
         transform: translateY(calc(var(--parallax-speed) * 20px));
